--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -19,14 +19,14 @@ jobs:
         run: pip install -U genpac
 
       - name: update pac
-        run: genpac --format=pac --pac-proxy="SOCKS5 127.0.0.1:4781" -o gfwlist.pac
+        run: genpac --format=pac --pac-proxy="SOCKS5 127.0.0.1:1080" -o mypac.pac
 
       - name: commit
         run: |
-            git config --global user.email c897611977@gmail.com
-            git config --global user.name ElmTran
+            git config --global user.email github@m.mrlyc.com
+            git config --global user.name MrLYC
             git add .
-            git commit -m "update pac" -a
+            git commit -m "update" -a
 
       - name: push changes
         uses: ad-m/github-push-action@master
