--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -19,7 +19,7 @@ jobs:
         run: pip install -U genpac
 
       - name: update pac
-        run: genpac --format=pac --pac-proxy="SOCKS5 127.0.0.1:1080" -o mypac.pac
+        run: genpac --format=pac --pac-proxy="PROXY 127.0.0.1:1080" -o mypac.pac
 
       - name: commit
         run: |
